--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="error_password_incorrect">Неверный пароль</string>
     <string name="error_password_required">Необходимо ввести пароль</string>
     <string name="ws_link">http://sr00038.md.mash-dvor.ru/alfa_green/ws/mobile.1cws</string>
+    <string name="sync_account_type">like@work</string>
+    <string name="content_authority">com.example.gbyakov.likework</string>
 </resources>
